--- a/index.html
+++ b/index.html
@@ -555,11 +555,9 @@
                 </div>
             </div>
                 <button class="roll-btn" id="rollBtn" onclick="rollDice()" 
-                    data-gaze-region 
-                    data-gaze-region-dwell-time="1000"  
-                    data-gaze-region-activation-method="Gaze"
-
-                    data-gaze-region-visibility="true">Roll 1 Dice</button>
+                    data-gaze-region
+                    data-gaze-region-dwell-time="2000"
+                    data-gaze-region-activation-method="Gaze">Roll 1 Dice</button>
             <div class="result-display" id="result" style="display: none;">
                 <div class="result-total" id="resultTotal">0</div>
                 <div class="result-breakdown" id="resultBreakdown"></div>
