--- a/index.html
+++ b/index.html
@@ -461,15 +461,13 @@
                     <div class="dice-controls">
                         <button class="dice-btn" onclick="updateDice('d4', -1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">−</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">−</button>
                         <span class="dice-count" id="count-d4">0</span>
                         <button class="dice-btn" onclick="updateDice('d4', 1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">+</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">+</button>
                     </div>
                 </div>
                 <div class="dice-type">
@@ -477,15 +475,13 @@
                     <div class="dice-controls">
                         <button class="dice-btn" onclick="updateDice('d6', -1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">−</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">−</button>
                         <span class="dice-count" id="count-d6">0</span>
                         <button class="dice-btn" onclick="updateDice('d6', 1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">+</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">+</button>
                     </div>
                 </div>
                 <div class="dice-type">
@@ -493,15 +489,13 @@
                     <div class="dice-controls">
                         <button class="dice-btn" onclick="updateDice('d8', -1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">−</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">−</button>
                         <span class="dice-count" id="count-d8">0</span>
                         <button class="dice-btn" onclick="updateDice('d8', 1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">+</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">+</button>
                     </div>
                 </div>
                 <div class="dice-type">
@@ -509,15 +503,13 @@
                     <div class="dice-controls">
                         <button class="dice-btn" onclick="updateDice('d10', -1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">−</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">−</button>
                         <span class="dice-count" id="count-d10">0</span>
                         <button class="dice-btn" onclick="updateDice('d10', 1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">+</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">+</button>
                     </div>
                 </div>
                 <div class="dice-type">
@@ -525,15 +517,13 @@
                     <div class="dice-controls">
                         <button class="dice-btn" onclick="updateDice('d12', -1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">−</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">−</button>
                         <span class="dice-count" id="count-d12">0</span>
                         <button class="dice-btn" onclick="updateDice('d12', 1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">+</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">+</button>
                     </div>
                 </div>
                 <div class="dice-type">
@@ -542,21 +532,18 @@
                         <button class="dice-btn" onclick="updateDice('d20', -1)" 
                             data-gaze-region 
                             data-gaze-region-dwell-time="1000" 
-                            data-gaze-region-activation-method="Gaze"
-
-                            data-gaze-region-visibility="true">−</button>
+                            data-gaze-region-activation-method="Gaze">−</button>
                         <span class="dice-count" id="count-d20">1</span>
                         <button class="dice-btn" onclick="updateDice('d20', 1)" 
                             data-gaze-region
-        data-gaze-region-dwell-time="300"
-        data-gaze-region-activation-method="Gaze"
-        data-gaze-region-visibility="true">+</button>
+        data-gaze-region-dwell-time="1000"
+        data-gaze-region-activation-method="Gaze">+</button>
                     </div>
                 </div>
             </div>
                 <button class="roll-btn" id="rollBtn" onclick="rollDice()" 
                     data-gaze-region
-                    data-gaze-region-dwell-time="2000"
+                    data-gaze-region-dwell-time="1000"
                     data-gaze-region-activation-method="Gaze">Roll 1 Dice</button>
             <div class="result-display" id="result" style="display: none;">
                 <div class="result-total" id="resultTotal">0</div>
@@ -685,16 +672,16 @@
             </div>
             <div class="keyboard">
                 <div class="keyboard-row">
-                    <button class="key" onclick="typeKey('1')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">1</button>
-                    <button class="key" onclick="typeKey('2')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">2</button>
-                    <button class="key" onclick="typeKey('3')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">3</button>
-                    <button class="key" onclick="typeKey('4')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">4</button>
-                    <button class="key" onclick="typeKey('5')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">5</button>
-                    <button class="key" onclick="typeKey('6')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">6</button>
-                    <button class="key" onclick="typeKey('7')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">7</button>
-                    <button class="key" onclick="typeKey('8')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">8</button>
-                    <button class="key" onclick="typeKey('9')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">9</button>
-                    <button class="key" onclick="typeKey('0')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze" data-gaze-region-visibility="true">0</button>
+                    <button class="key" onclick="typeKey('1')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">1</button>
+                    <button class="key" onclick="typeKey('2')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">2</button>
+                    <button class="key" onclick="typeKey('3')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">3</button>
+                    <button class="key" onclick="typeKey('4')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">4</button>
+                    <button class="key" onclick="typeKey('5')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">5</button>
+                    <button class="key" onclick="typeKey('6')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">6</button>
+                    <button class="key" onclick="typeKey('7')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">7</button>
+                    <button class="key" onclick="typeKey('8')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">8</button>
+                    <button class="key" onclick="typeKey('9')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">9</button>
+                    <button class="key" onclick="typeKey('0')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">0</button>
                 </div>
                 <div class="keyboard-row">
                     <button class="key" onclick="typeKey('Q')" data-gaze-region data-gaze-region-dwell-time="300" data-gaze-region-activation-method="Gaze">Q</button>
@@ -837,10 +824,9 @@
                 btn.className = 'phrase-btn';
                 btn.textContent = phrase;
                 btn.setAttribute('data-gaze-region', '');
-                btn.setAttribute('data-gaze-region-dwell-time', '2000');
+                btn.setAttribute('data-gaze-region-dwell-time', '1000');
                 btn.setAttribute('data-gaze-region-activation-method', 'Gaze');
                 // removed data-gaze-region-margin
-                btn.setAttribute('data-gaze-region-visibility', 'true');
                 btn.onclick = () => {
                     navigator.clipboard.writeText(phrase).catch(() => {});
                     btn.classList.add('copied');
