--- a/index.html
+++ b/index.html
@@ -335,11 +335,12 @@
             background: var(--secondary);
             border: 1px solid var(--border);
             color: var(--foreground);
-            padding: 12px 18px;
+            padding: 20px 28px;
             border-radius: 8px;
             cursor: pointer;
-            font-size: 0.95em;
+            font-size: 1.3em;
             transition: all 0.2s;
+            font-weight: 600;
         }
 
         .phrase-btn:hover {
@@ -413,13 +414,13 @@
 
         .scroll-btn {
             background: var(--card);
-            border: 2px solid var(--primary);
+            border: 3px solid var(--primary);
             color: var(--primary);
-            width: 80px;
-            height: 80px;
+            width: 120px;
+            height: 120px;
             border-radius: 12px;
             cursor: pointer;
-            font-size: 2.5em;
+            font-size: 3.5em;
             transition: all 0.2s;
             display: flex;
             align-items: center;
@@ -537,11 +538,11 @@
     <div class="scroll-controls">
         <button class="scroll-btn" onclick="scrollPage('up')" 
                 data-gaze-region 
-                data-gaze-region-dwell-time="1500" 
+                data-gaze-region-dwell-time="800" 
                 data-gaze-region-activation-method="Gaze">▲</button>
         <button class="scroll-btn" onclick="scrollPage('down')" 
                 data-gaze-region 
-                data-gaze-region-dwell-time="1500" 
+                data-gaze-region-dwell-time="800" 
                 data-gaze-region-activation-method="Gaze">▼</button>
     </div>
 
